2010-05-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Fixed negative timestamp 
	for bug: 2926876

2010-05-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php
	operation/agentes/status_monitor.php: Fixed full monitor
	checks in tactical view and monitor status filter 
	on monitor detail

2010-05-13  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: fixed the empty cell.
	Fixes: #2996522

2010-05-13  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora.js: check if exist the "any" text translation.
	* godmode/reporting/visual_console_builder.wizard.php: add the "any"
	translation.
	Fixes: #3000496

2010-05-13  Miguel de Dios  <miguel.dedios@artica.es>

	* install.php: check the exit library "Multibyte String".
	Fixes: #3001028

2010-05-12  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php: Fixed unknown
	and no init monitors queries for monitor checks. 
	Bug: 3000460

2010-05-12  Sergio Martin <sergio.martin@artica.es>

	* extras/pandora_diag.php: Fixed the SQL error
	into diagnostic info section. Now the system
	check the enterprise version before to show 
	tlocal_component info. Bug: 2998918

2010-05-12  Sergio Martin <sergio.martin@artica.es>

	* include/functions_gis.php: Fixed the maps of
	type Googlemaps in agent view for bug: 2993745

2010-05-11  Ramon Novoa  <rnovoa@artica.es>

	* operation/agentes/stat_win.php: Pass the start date to min, max and
          avg functions.

        * godmode/alerts/configure_alert_action.php: Fixed a typo.

2010-05-11 Raúl Mateos <raulofpandora@gmail.com>

	* godmode/gis_maps/configure_gis_map.php: Updated year. Clean code.

2010-05-11  Sergio Martin <sergio.martin@artica.es>

	* godmode/setup/gis_step_2.php: Fixed the creation
	of connection map in GIS maps for bug 3000031

2010-05-11 Raúl Mateos <raulofpandora@gmail.com>

	* godmode/reporting/map_builder.php: Fixed a typo.
